--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YMenu">
         <activity
+            android:name=".BottomNavigation"
+            android:exported="false"
+            android:label="@string/title_activity_bottom_navigation"
+            android:theme="@style/Theme.YMenu.NoActionBar" />
+        <activity
+            android:name=".NavHost"
+            android:exported="false"
+            android:label="@string/title_activity_nav_host"
+            android:theme="@style/Theme.YMenu.NoActionBar" />
+        <activity
+            android:name=".NavigationView"
+            android:exported="false"
+            android:label="@string/title_activity_navigation_view"
+            android:theme="@style/Theme.YMenu.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
