--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
     }
 }
 
+
 dependencies {
     def lifecycle_version = "2.2.0"
 
@@ -62,6 +63,20 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
+
+    //CameraX
+    def camerax_version = "1.0.1"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:1.0.0-alpha27"
+
+
+    //accompanist
+    def accompanist_version = "0.18.0"
+    implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.compose.ui:ui-tooling:1.0.1"
     implementation 'androidx.leanback:leanback:1.0.0'
     testImplementation 'junit:junit:4.+'
