--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:1.0.0-alpha27"
 
+    // QR CODE
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 
     //accompanist
     def accompanist_version = "0.18.0"
@@ -78,6 +80,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.compose.ui:ui-tooling:1.0.1"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
     implementation 'androidx.leanback:leanback:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
