--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="CameraActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YMenu.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN_CAMERA" />
+
+                <category android:name="android.intent.category.LAUNCHER_CAMERA" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
