--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,4 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin
 .idea/inspectionProfiles/Project_Default.xml
+.idea
