--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.ynovlyon.ymenu"
-        minSdk 21
+        minSdk 24
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -65,6 +65,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation "androidx.compose.ui:ui-tooling:1.0.1"
     implementation 'androidx.leanback:leanback:1.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'dev.burnoo:compose-remember-preference:0.3.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
