--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,7 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:1.0.0-alpha27"
 
-    // QR CODE
-    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.google.mlkit:barcode-scanning:17.0.0'
 
     //accompanist
     def accompanist_version = "0.18.0"
