--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,17 +36,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="CameraActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.YMenu.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN_CAMERA" />
-
-                <category android:name="android.intent.category.LAUNCHER_CAMERA" />
-            </intent-filter>
-        </activity>
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="barcode" />
     </application>
 
 </manifest>
