Revert "Feature/on boarding"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.ynovlyon.ymenu"
-    tools:ignore="MissingLeanbackLauncher">
-
-    <uses-feature
-        android:name="android.software.leanback"
-        android:required="false" />
-    <uses-feature
-        android:name="android.hardware.touchscreen"
-        android:required="false" />
+    package="com.ynovlyon.ymenu">
 
     <application
         android:allowBackup="true"
@@ -24,12 +15,12 @@
             android:label="@string/title_activity_bottom_navigation"
             android:theme="@style/Theme.YMenu.NoActionBar" />
         <activity
-            android:name=".presentation.navbar.NavHost"
+            android:name=".NavHost"
             android:exported="false"
             android:label="@string/title_activity_nav_host"
             android:theme="@style/Theme.YMenu.NoActionBar" />
         <activity
-            android:name=".presentation.navbar.NavigationViews"
+            android:name=".NavigationView"
             android:exported="false"
             android:label="@string/title_activity_navigation_view"
             android:theme="@style/Theme.YMenu.NoActionBar" />
