--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -236,4 +237,3 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin
 .idea/inspectionProfiles/Project_Default.xml
-.idea
