--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
-
+    package="com.ynovlyon.ymenu">
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,12 +26,12 @@
             android:label="@string/title_activity_bottom_navigation"
             android:theme="@style/Theme.YMenu.NoActionBar" />
         <activity
-            android:name=".presentation.navbar.NavHost"
+            android:name=".NavHost"
             android:exported="false"
             android:label="@string/title_activity_nav_host"
             android:theme="@style/Theme.YMenu.NoActionBar" />
         <activity
-            android:name=".presentation.navbar.NavigationViews"
+            android:name=".NavigationView"
             android:exported="false"
             android:label="@string/title_activity_navigation_view"
             android:theme="@style/Theme.YMenu.NoActionBar" />
@@ -44,6 +46,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="barcode" />
     </application>
 
 </manifest>
