--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,7 @@ dependencies {
     //Coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
+
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+
 }
