--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'io.coil-kt:coil-compose:2.0.0-rc03'
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
     //CameraX
     def camerax_version = "1.0.1"
