--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -111,5 +112,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
 
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
 }
