--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,19 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
+    // ARCore (Google Play Services for AR) library.
+    implementation 'com.google.ar:core:1.30.0'
+
+    // Obj - a simple Wavefront OBJ file loader
+    // https://github.com/javagl/Obj
+    implementation 'de.javagl:obj:0.2.1'
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
+
+    implementation 'com.google.android.material:material:1.1.0'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
 }
